# WordSorterWebServer

./: CMakeLists.txt  LICENSE  README.md  log.txt
.github/workflows/: cmake-multi-platform.yml
src/: WebServer.cpp  WebServer.h  WordSorter.cpp  WordSorter.h  main.cpp  sorter.cpp  sorter.h
